--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,9 +26,12 @@
                     </div>
                 </div>
                 <div id="words"></div>
-                <div id="word-input">
-                    <input type="text" name="typing practice input" />
-                </div>
+                <input
+                    onfocus="this.value=''"
+                    type="text"
+                    id="word-input"
+                    name="typing practice input"
+                />
                 <div class="actions">
                     <button id="scroll-up">UP</button>
                     <button id="scroll-down">DOWN</button>
