refactor view into class and separate main func to index.ts

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,5 +49,5 @@
             </main>
         </div>
     </body>
-    <script type="module" src="game/game-view.js"></script>
+    <script type="module" src="game/index.js"></script>
 </html>
