show end of game stats

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -45,6 +45,7 @@
                         id="word-input"
                         name="typing practice input"
                     />
+                    <div id="stats" class="hidden"></div>
                 </div>
                 <footer>
                     <p>
