--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <meta charset="UTF-8" />
     <title>Apskrift</title>
@@ -62,6 +62,9 @@
                         type="text"
                         id="word-input"
                         name="typing practice input"
+                        autocomplete="off"
+                        autocapitalize="off"
+                        spellcheck="false"
                     />
                     <div id="stats" class="hidden"></div>
                 </div>
