put words at the top to fit mobile keyboard

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -74,7 +74,7 @@
                         <span class="hide-on-mobile">to restart</span>
                     </p>
                     <a href="https://github.com/samkaj/apskrift">
-                        <button class="link">source on GitHub</button>
+                        <button class="link">apskrift on github</button>
                     </a>
                 </footer>
             </main>
